# conala-baseline

./: README.md  annot.yaml  annotmined.yaml  conala-baseline.sh  conala_baseline.sh  requirements.txt  setup.cfg
config/: annotmined.yaml
eval/: conala_eval.py  evaluate.py  metadata
preproc/: convert_to_python3.py  extract_raw_data.py  json_to_seq2seq.py  seq2seq_output_to_code.py  util.py
