[metadata]
name = conala-baseline
version = 1.1.0
description = CoNaLa Preprocessing Scripts/Baseline
author = Graham Neubig, Edgar Chen
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/conala-corpus/conala-baseline
project-urls =
    Documentation = https://conala-corpus.github.io/
license = Apache Software License
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python

[options]
zip_safe = False
py_modules =
    bleu_score
    conala_eval

include_package_data = True
package_dir =
    =eval
python_requires = >=3.5.0
install_requires =

[options.entry_points]
console_scripts =
    conala-eval = conala_eval:main

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
formats = bdist_wheel
